--- a/itopener-parent/pom.xml
+++ b/itopener-parent/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.itopener</groupId>
 	<artifactId>itopener-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>itopener-parent</name>
@@ -18,7 +18,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<fastjson.version>1.2.31</fastjson.version>
 		<drools.version>6.5.0.Final</drools.version>
 		<curator-client.version>2.11.1</curator-client.version>
@@ -117,6 +117,8 @@
 		<module>msxf-spring-boot-admin</module>
 		<module>msxf-normal-parent</module>
 		<module>msxf-drools-parent</module>
+		<module>itopener-framework</module>
+		<module>itopener-utils</module>
 	</modules>
 
 	<repositories>
