--- a/itopener-parent/itopener-spring-boot-starters-parent/itopener-zklock-spring-boot-starter-parent/itopener-zklock-spring-boot-starter/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/itopener-zklock-spring-boot-starter-parent/itopener-zklock-spring-boot-starter/pom.xml
@@ -5,19 +5,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-parent</artifactId>
+		<artifactId>itopener-zklock-spring-boot-starter-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-spring-boot-starters-parent</artifactId>
-	<name>itopener-spring-boot-starters-parent</name>
+	<artifactId>itopener-zklock-spring-boot-starter</artifactId>
+	<name>itopener-zklock-spring-boot-starter</name>
 	<url>http://maven.apache.org</url>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<modules>
-		<module>itopener-druid-spring-boot-starter-parent</module>
-		<module>itopener-druidstat-spring-boot-starter-parent</module>
-		<module>itopener-zklock-spring-boot-starter-parent</module>
-	</modules>
+	<dependencies>
+	</dependencies>
 </project>
