--- a/itopener-parent/itopener-spring-boot-starters-parent/itopener-zklock-spring-boot-starter-parent/itopener-zklock-spring-boot-starter/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/itopener-zklock-spring-boot-starter-parent/itopener-zklock-spring-boot-starter/pom.xml
@@ -16,5 +16,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>itopener-zklock-spring-boot-autoconfigure</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 	</dependencies>
 </project>
