--- a/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -19,5 +17,6 @@
 		<module>itopener-druid-spring-boot-starter-parent</module>
 		<module>itopener-druidstat-spring-boot-starter-parent</module>
 		<module>itopener-zklock-spring-boot-starter-parent</module>
-	</modules>
+    <module>itopener-tbschedule-spring-boot-starter-parent</module>
+  </modules>
 </project>
