--- a/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
@@ -5,14 +5,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-parent</artifactId>
+		<artifactId>itopener-demo-springboot-admin-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-demos-parent</artifactId>
-	<name>itopener-demos-parent</name>
+	<artifactId>itopener-demo-springboot-admin-client</artifactId>
+	<name>itopener-demo-springboot-admin-client</name>
 	<url>http://maven.apache.org</url>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
+	</dependencies>
 </project>
