add module: kafka demo

--- a/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
@@ -21,4 +21,21 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<finalName>itopener-demo-springboot-admin-client</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
