fixed comments add module: druid fixed utils package

--- a/itopener-parent/itopener-demo-parent/itopener-demo-kafka-parent/itopener-demo-kafka-producer/src/main/resources/application-dev.properties
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-kafka-parent/itopener-demo-kafka-producer/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 logging.level.org.springframework=INFO
-logging.level.com.msxf=DEBUG
+logging.level.com.itopener=DEBUG
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.retries=3
