--- a/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/src/main/resources/application-dev.properties
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 logging.level.org.springframework=INFO
-logging.level.com.msxf=DEBUG
+logging.level.com.itopener=DEBUG
 
 spring.boot.admin.url=http://localhost:8080  
 management.security.enabled=false
