--- a/itopener-parent/itopener-framework/pom.xml
+++ b/itopener-parent/itopener-framework/pom.xml
@@ -37,5 +37,17 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper-spring-boot-starter</artifactId>
+		    <optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
