add module: rabbitmq demo

--- a/itopener-parent/itopener-demo-parent/itopener-demo-druid-parent/itopener-demo-druid/src/main/resources/application-dev.properties
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-druid-parent/itopener-demo-druid/src/main/resources/application-dev.properties
@@ -4,6 +4,13 @@ server.port=8080
 logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
+# Druid
+logging.level.druid.sql=ERROR
+logging.level.druid.sql.DataSource=ERROR
+logging.level.druid.sql.Connection=ERROR
+logging.level.druid.sql.Statement=DEBUG
+logging.level.druid.sql.ResultSet=ERROR
+
 #datasource
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
