--- a/itopener-parent/itopener-tellist-parent/itopener-tellist/pom.xml
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist/pom.xml
@@ -40,6 +40,12 @@
 		
 		<dependency>
 			<groupId>com.itopener</groupId>
+			<artifactId>itopener-druid-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
 			<artifactId>itopener-tellist-view</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
