--- a/itopener-parent/itopener-tellist-parent/itopener-tellist/src/main/resources/application-dev.properties
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist/src/main/resources/application-dev.properties
@@ -4,3 +4,32 @@ server.port=8080
 logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
+#datasource
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tellist?useUnicode=true&useSSL=true&characterEncoding=utf-8&mysqlEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=false&autoReconnect=true&failOverReadOnly=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.initialSize=3
+spring.datasource.minIdle=3
+spring.datasource.maxActive=20
+spring.datasource.maxWait=100
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.maxEvictableIdleTimeMillis=60000
+spring.datasource.validationQuery=SELECT 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=10
+spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.removeAbandoned=true
+spring.datasource.removeAbandonedTimeout=10
+spring.datasource.logAbandoned=true
+spring.datasource.failFast=true
+#filters
+spring.datasource.filters=stat,log4j
+spring.datasource.connectionProperties=\
+druid.stat.mergeSql=false;\
+druid.stat.slowSqlMillis=2000;\
+druid.stat.logSlowSql=true
