--- a/itopener-parent/itopener-tellist-parent/itopener-tellist/src/main/resources/application.properties
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.profiles.active=dev
 
 spring.application.name=itopener-tellist
+
+#mybatis
+mybatis.mapperLocations=classpath*:com/itopener/tellist/mapper/*.xml
+#pagehelper
+pagehelper.helperDialect=mysql
