--- a/itopener-parent/itopener-utils/pom.xml
+++ b/itopener-parent/itopener-utils/pom.xml
@@ -33,5 +33,12 @@
 			<artifactId>logback-classic</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-test</artifactId>
+	        <scope>test</scope>
+	        <optional>true</optional>
+	    </dependency>
 	</dependencies>
 </project>
