--- a/itopener-parent/itopener-demo-parent/itopener-demo-druid-parent/itopener-demo-druid/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-druid-parent/itopener-demo-druid/pom.xml
@@ -42,12 +42,14 @@
 			<groupId>com.itopener</groupId>
 			<artifactId>itopener-druid-spring-boot-starter</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>com.itopener</groupId>
 			<artifactId>itopener-druidstat-spring-boot-starter</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 		
 		<dependency>
