--- a/itopener-parent/itopener-tellist-parent/itopener-tellist/pom.xml
+++ b/itopener-parent/itopener-tellist-parent/itopener-tellist/pom.xml
@@ -42,6 +42,7 @@
 			<groupId>com.itopener</groupId>
 			<artifactId>itopener-druid-spring-boot-starter</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 		
 		<dependency>
