add demo: resttemplate

--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -22,5 +22,6 @@
     <module>itopener-demo-redislock</module>
     <module>itopener-demo-zklock</module>
     <module>itopener-demo-async</module>
+    <module>itopener-demo-rest-parent</module>
   </modules>
 </project>
