完善rest示例模块的配置和注释说明

--- a/itopener-parent/itopener-demo-parent/itopener-demo-rest-parent/itopener-demo-rest-client/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-rest-parent/itopener-demo-rest-client/pom.xml
@@ -44,12 +44,19 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 		
-		<!-- restTemplate如果不依赖此包，会出现消息头为text/html无法转换成对象的异常 -->
 		<dependency>
-			<groupId>org.springframework.amqp</groupId>
-			<artifactId>spring-rabbit</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
