--- a/itopener-parent/itopener-demo-parent/itopener-demo-rest-parent/itopener-demo-rest-server/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-rest-parent/itopener-demo-rest-server/pom.xml
@@ -43,6 +43,20 @@
 			<artifactId>itopener-demo-rest-sdk</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
