--- a/itopener-parent/itopener-demo-parent/itopener-demo-mongodb-parent/itopener-demo-mongodb/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-mongodb-parent/itopener-demo-mongodb/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-demo-parent</artifactId>
+		<artifactId>itopener-demo-mongodb-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-demo-elasticjob</artifactId>
-	<name>itopener-demo-elasticjob</name>
+	<artifactId>itopener-demo-mongodb</artifactId>
+	<name>itopener-demo-mongodb</name>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -37,11 +37,11 @@
 			<artifactId>itopener-framework</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>com.dangdang</groupId>
-		    <artifactId>elastic-job-lite-core</artifactId>
-		    <version>2.1.4</version>
+			<groupId>com.itopener</groupId>
+			<artifactId>itopener-demo-mongodb-model</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
@@ -60,7 +60,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>itopener-demo-elasticjob</finalName>
+		<finalName>itopener-demo-mongodb</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
