--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -26,5 +26,7 @@
     <module>itopener-demo-scheduling</module>
     <module>itopener-demo-elasticjob</module>
     <module>itopener-demo-mongodb-parent</module>
+    <module>itopener-demo-springcloud-parent</module>
+    <module>itopener-demo-eureka-parent</module>
   </modules>
 </project>
