--- a/itopener-parent/itopener-demo-parent/itopener-demo-springcloud-parent/itopener-demo-springcloud-gateway/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springcloud-parent/itopener-demo-springcloud-gateway/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-demo-parent</artifactId>
+		<artifactId>itopener-demo-springcloud-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-demo-elasticjob</artifactId>
-	<name>itopener-demo-elasticjob</name>
+	<artifactId>itopener-demo-springcloud-gateway</artifactId>
+	<name>itopener-demo-springcloud-gateway</name>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -17,32 +17,31 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>com.fasterxml.jackson.core</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-feign</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-zuul</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.itopener</groupId>
 			<artifactId>itopener-framework</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		
-		<dependency>
-		    <groupId>com.dangdang</groupId>
-		    <artifactId>elastic-job-lite-core</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -57,9 +56,8 @@
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
-
 	<build>
-		<finalName>itopener-demo-elasticjob</finalName>
+		<finalName>itopener-demo-springcloud-gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
