--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -29,5 +29,6 @@
     <module>itopener-demo-springcloud-parent</module>
     <module>itopener-demo-eureka-parent</module>
     <module>itopener-demo-ribbon-parent</module>
+    <module>itopener-demo-feign-parent</module>
   </modules>
 </project>
