--- a/itopener-parent/itopener-demo-parent/itopener-demo-feign-parent/itopener-demo-feign-server/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-feign-parent/itopener-demo-feign-server/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-demo-ribbon-parent</artifactId>
+		<artifactId>itopener-demo-feign-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-demo-ribbon-client</artifactId>
-	<name>itopener-demo-ribbon-client</name>
+	<artifactId>itopener-demo-feign-server</artifactId>
+	<name>itopener-demo-feign-server</name>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -40,18 +40,13 @@
 
 		<dependency>
 			<groupId>com.itopener</groupId>
-			<artifactId>itopener-demo-ribbon-sdk</artifactId>
+			<artifactId>itopener-demo-feign-sdk</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-ribbon</artifactId>
 		</dependency>
 
 		<dependency>
@@ -70,7 +65,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>itopener-demo-ribbon-client</finalName>
+		<finalName>itopener-demo-feign-server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
