--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -30,5 +30,6 @@
     <module>itopener-demo-eureka-parent</module>
     <module>itopener-demo-ribbon-parent</module>
     <module>itopener-demo-feign-parent</module>
+    <module>itopener-demo-hystrix-parent</module>
   </modules>
 </project>
