--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -13,24 +14,23 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-  <modules>
-    <module>itopener-demo-springboot-admin-parent</module>
-    <module>itopener-demo-kafka-parent</module>
-    <module>itopener-demo-logback-kafka-parent</module>
-    <module>itopener-demo-druid-parent</module>
-    <module>itopener-demo-rabbitmq-parent</module>
-    <module>itopener-demo-redislock</module>
-    <module>itopener-demo-zklock</module>
-    <module>itopener-demo-async</module>
-    <module>itopener-demo-rest-parent</module>
-    <module>itopener-demo-scheduling</module>
-    <module>itopener-demo-elasticjob</module>
-    <module>itopener-demo-mongodb-parent</module>
-    <module>itopener-demo-springcloud-parent</module>
-    <module>itopener-demo-eureka-parent</module>
-    <module>itopener-demo-ribbon-parent</module>
-    <module>itopener-demo-feign-parent</module>
-    <module>itopener-demo-hystrix-parent</module>
-    <module>itopener-demo-zuul-parent</module>
-  </modules>
+	<modules>
+		<module>itopener-demo-springboot-admin-parent</module>
+		<module>itopener-demo-kafka-parent</module>
+		<module>itopener-demo-logback-kafka-parent</module>
+		<module>itopener-demo-druid-parent</module>
+		<module>itopener-demo-rabbitmq-parent</module>
+		<module>itopener-demo-redislock</module>
+		<module>itopener-demo-zklock</module>
+		<module>itopener-demo-async</module>
+		<module>itopener-demo-rest-parent</module>
+		<module>itopener-demo-scheduling</module>
+		<module>itopener-demo-elasticjob</module>
+		<module>itopener-demo-mongodb-parent</module>
+		<module>itopener-demo-eureka-parent</module>
+		<module>itopener-demo-ribbon-parent</module>
+		<module>itopener-demo-feign-parent</module>
+		<module>itopener-demo-hystrix-parent</module>
+		<module>itopener-demo-zuul-parent</module>
+	</modules>
 </project>
