add demo: es update demo: mongodb

--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -32,5 +32,6 @@
 		<module>itopener-demo-feign-parent</module>
 		<module>itopener-demo-hystrix-parent</module>
 		<module>itopener-demo-zuul-parent</module>
+		<module>itopener-demo-es-parent</module>
 	</modules>
 </project>
