--- a/itopener-parent/itopener-demo-parent/pom.xml
+++ b/itopener-parent/itopener-demo-parent/pom.xml
@@ -33,5 +33,6 @@
 		<module>itopener-demo-zuul-parent</module>
 		<module>itopener-demo-es-parent</module>
     <module>itopener-demo-redis-parent</module>
+    <module>itopener-demo-jsonp-parent</module>
   </modules>
 </project>
