add starter: elasticjob update demo: elasticjob

--- a/itopener-parent/itopener-demo-parent/itopener-demo-elasticjob/src/main/resources/application-dev2.properties
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-elasticjob/src/main/resources/application-dev2.properties
@@ -1,30 +1,21 @@
 #server
-server.port=8080
+server.port=8082
 
 logging.level.org.springframework=INFO
 logging.level.com.itopener=INFO
 
-spring.elasticjob.zk.serverLists=127.0.0.1:2181
-spring.elasticjob.zk.namespace=elastic-job-lite-springboot
-spring.elasticjob.event.db.enable=true
-
-spring.elasticjob.simpleJobs.userJob.cron=0/3 * * * * ?
-spring.elasticjob.simpleJobs.userJob.shardingTotalCount=3
-spring.elasticjob.simpleJobs.userJob.shardingItemParameters=0=Beijing,1=Shanghai,2=Guangzhou
-
-spring.elasticjob.simpleJobs.userJob2.cron=0/4 * * * * ?
-spring.elasticjob.simpleJobs.userJob2.shardingTotalCount=3
-spring.elasticjob.simpleJobs.userJob2.shardingItemParameters=0=Beijing,1=Shanghai,2=Guangzhou
-
-spring.elasticjob.dataflowJobs.springDataflowJob.cron=0/5 * * * * ?
-spring.elasticjob.dataflowJobs.springDataflowJob.shardingTotalCount=3
-spring.elasticjob.dataflowJobs.springDataflowJob.shardingItemParameters=0=Beijing,1=Shanghai,2=Guangzhou
+regCenter.serverList=127.0.0.1:2181
+regCenter.namespace=elastic-job-lite-springboot
+  
+simpleJob.cron=0/5 * * * * ?
+simpleJob.shardingTotalCount=3
+simpleJob.shardingItemParameters=0=Beijing,1=Shanghai,2=Guangzhou
 
 # Druid
 logging.level.druid.sql=ERROR
 logging.level.druid.sql.DataSource=ERROR
 logging.level.druid.sql.Connection=ERROR
-logging.level.druid.sql.Statement=DEBUG
+logging.level.druid.sql.Statement=INFO
 logging.level.druid.sql.ResultSet=ERROR
 
 #datasource
