--- a/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
@@ -19,5 +19,6 @@
 		<module>itopener-zklock-spring-boot-starter-parent</module>
     <module>itopener-tbschedule-spring-boot-starter-parent</module>
     <module>itopener-redislock-spring-boot-starter-parent</module>
+    <module>itopener-elasticjob-spring-boot-starter-parent</module>
   </modules>
 </project>
