--- a/itopener-parent/itopener-demo-parent/itopener-demo-elasticjob/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-elasticjob/pom.xml
@@ -40,9 +40,38 @@
 		
 		<dependency>
 		    <groupId>com.dangdang</groupId>
-		    <artifactId>elastic-job-lite-core</artifactId>
+		    <artifactId>elastic-job-lite-spring</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>itopener-druid-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>itopener-elasticjob-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper-spring-boot-starter</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
