--- a/itopener-parent/pom.xml
+++ b/itopener-parent/pom.xml
@@ -142,7 +142,7 @@
 			
 			<dependency>
 			    <groupId>com.dangdang</groupId>
-			    <artifactId>elastic-job-lite-core</artifactId>
+			    <artifactId>elastic-job-lite-spring</artifactId>
 			    <version>${elastic-job-lite.version}</version>
 			</dependency>
 		</dependencies>
