--- a/itopener-parent/pom.xml
+++ b/itopener-parent/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -155,7 +155,8 @@
 		<module>itopener-tools-parent</module>
 		<module>itopener-demo-parent</module>
 		<module>itopener-tellist-parent</module>
-	</modules>
+    <module>itopener-authority-parent</module>
+  </modules>
 
 	<repositories>
 		<repository>
