修改tms日志文件位置和名称\n调整菜单

--- a/itopener-parent/itopener-tms-parent/itopener-tms/src/main/resources/application-dev.properties
+++ b/itopener-parent/itopener-tms-parent/itopener-tms/src/main/resources/application-dev.properties
@@ -4,6 +4,9 @@ server.port=8080
 logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
+logging.path=logs/
+logging.file=logs/tms-all.log
+
 # Druid
 logging.level.druid.sql=ERROR
 logging.level.druid.sql.DataSource=ERROR
