spring session jdbc demo增加配置：定时清理过期session的任务cron表达式配置

--- a/itopener-parent/itopener-demo-parent/itopener-demo-session-parent/itopener-demo-session-jdbc/src/main/resources/application.properties
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-session-parent/itopener-demo-session-jdbc/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.application.name=itopener-demo-session-jdbc
 #spring session jdbc
 spring.session.store-type=jdbc
 spring.session.jdbc.initializer.enabled=false
+#JdbcOperationsSessionRepository.cleanUpExpiredSessions()
+spring.session.cleanup.cron.expression=0 * * * * *
