add autoconfiguration: zuul db route update demo: zuul-use zuul db route update demo: springboot admin-add dependences(test jar and devtools jar)

--- a/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin-client/pom.xml
@@ -20,6 +20,20 @@
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	
 	<build>
