--- a/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-springboot-admin-parent/itopener-demo-springboot-admin/pom.xml
@@ -20,13 +20,29 @@
 		    <groupId>de.codecentric</groupId>
 		    <artifactId>spring-boot-admin-server</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-server-ui</artifactId>
 		</dependency>
+		
 		<dependency>
 		    <groupId>de.codecentric</groupId>
 		    <artifactId>spring-boot-admin-server-ui-login</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
