--- a/itopener-parent/itopener-demo-parent/itopener-demo-zuul-parent/itopener-demo-zuul-client/pom.xml
+++ b/itopener-parent/itopener-demo-parent/itopener-demo-zuul-parent/itopener-demo-zuul-client/pom.xml
@@ -53,6 +53,29 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>itopener-zuul-dbroute-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+		
+		<!-- 数据库相关jar包是为了使用数据库的zuul route -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
