--- a/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-dbroute-spring-boot-parent/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-dbroute-spring-boot-parent/pom.xml
@@ -3,22 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-demo-parent</artifactId>
+		<artifactId>itopener-spring-boot-starters-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-demo-zuul-parent</artifactId>
-	<name>itopener-demo-zuul-parent</name>
+	<artifactId>itopener-zuul-dbroute-spring-boot-parent</artifactId>
+	<name>itopener-zuul-dbroute-spring-boot-parent</name>
 	<url>http://maven.apache.org</url>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<modules>
-		<module>itopener-demo-zuul-sdk</module>
-		<module>itopener-demo-zuul-eureka</module>
-		<module>itopener-demo-zuul-server1</module>
-		<module>itopener-demo-zuul-server2</module>
-		<module>itopener-demo-zuul-client</module>
-    <module>itopener-demo-zuul-model</module>
+		<module>
+			itopener-zuul-dbroute-spring-boot-autoconfigure
+		</module>
+    <module>itopener-zuul-dbroute-spring-boot-starter</module>
   </modules>
 </project>
