--- a/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-zkroute-spring-boot-parent/itopener-zuul-zkroute-spring-boot-autoconfigure/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/itopener-zuul-zkroute-spring-boot-parent/itopener-zuul-zkroute-spring-boot-autoconfigure/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
-		<artifactId>itopener-zuul-dbroute-spring-boot-parent</artifactId>
+		<artifactId>itopener-zuul-zkroute-spring-boot-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>itopener-zuul-dbroute-spring-boot-autoconfigure</artifactId>
-	<name>itopener-zuul-dbroute-spring-boot-autoconfigure</name>
+	<artifactId>itopener-zuul-zkroute-spring-boot-autoconfigure</artifactId>
+	<name>itopener-zuul-zkroute-spring-boot-autoconfigure</name>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -26,20 +26,28 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-		
-		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
 		</dependency>
 	</dependencies>
 </project>
