--- a/itopener-parent/pom.xml
+++ b/itopener-parent/pom.xml
@@ -29,6 +29,7 @@
 		<tbschedule.version>3.3.3.2</tbschedule.version>
 		<spring-boot-admin.version>1.5.0</spring-boot-admin.version>
 		<elastic-job-lite.version>2.1.4</elastic-job-lite.version>
+		<spring-cloud.version>Dalston.RELEASE</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -123,7 +124,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Dalston.RELEASE</version>
+				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
