--- a/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
+++ b/itopener-parent/itopener-spring-boot-starters-parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -20,7 +21,8 @@
 		<module>itopener-tbschedule-spring-boot-starter-parent</module>
 		<module>itopener-redislock-spring-boot-starter-parent</module>
 		<module>itopener-elasticjob-spring-boot-starter-parent</module>
-		<module>itopener-zuul-dbroute-spring-boot-parent</module>
-    <module>itopener-zuul-zkroute-spring-boot-parent</module>
-  </modules>
+		<module>itopener-zuul-dbroute-spring-boot-starter-parent</module>
+		<module>itopener-zuul-zkroute-spring-boot-starter-parent</module>
+		<module>itopener-zuul-redisroute-spring-boot-starter-parent</module>
+	</modules>
 </project>
