--- a/itopener-parent/tools-parent/tools-redis-parent/tools-redis/pom.xml
+++ b/itopener-parent/tools-parent/tools-redis-parent/tools-redis/pom.xml
@@ -50,10 +50,18 @@
 		</dependency>
 		
 		<dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-devtools</artifactId>
-	        <optional>true</optional>
-	    </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	
 	<build>
