增加zuul route admin部分代码

--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/src/main/resources/application.properties
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.profiles.active=dev
 spring.application.name=tools-zuul-route-admin
 
 zuul.ignored-services="*"
+
+#mybatis
+mybatis.mapperLocations=classpath*:com/itopener/tools.zuul.route.admin.mapper/*.xml
+#pagehelper
+pagehelper.helperDialect=mysql
