调整zuul route admin，使db、zk、redis三者可以根据需要进行配置使用，不使用的不需要配置

--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/pom.xml
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/pom.xml
@@ -46,6 +46,12 @@
 		
 		<dependency>
 			<groupId>com.itopener</groupId>
+			<artifactId>tools-zuul-route-admin-model</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.itopener</groupId>
 			<artifactId>tools-zuul-route-admin-view</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
