--- a/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/src/main/resources/application-dev.properties
+++ b/itopener-parent/tools-parent/tools-zuul-route-admin-parent/tools-zuul-route-admin/src/main/resources/application-dev.properties
@@ -4,6 +4,9 @@ server.port=8085
 logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
+#zk
+spring.zuul.route.admin.zk.serverLists=127.0.0.1:2181
+
 #redis
 #spring.redis.host=127.0.0.1
 #spring.redis.port=6379
