完善zuul route admin对路由规则的管理功能

--- a/itopener-parent/demo-parent/demo-zuul-parent/demo-zuul-client-db/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-zuul-parent/demo-zuul-client-db/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ logging.level.com.itopener=DEBUG
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
 
-spring.zuul.route.refreshCron:0 0 * * * ?
+spring.zuul.route.refreshCron:0/20 * * * * ?
 
 # Druid
 logging.level.druid.sql=ERROR
