修改zuul route示例代码的client模块名

--- a/itopener-parent/spring-boot-starters-parent/zuul-route-spring-boot-starter-parent/zuul-route-redis-spring-boot-starter-parent/pom.xml
+++ b/itopener-parent/spring-boot-starters-parent/zuul-route-spring-boot-starter-parent/zuul-route-redis-spring-boot-starter-parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -12,9 +13,9 @@
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<modules></modules>	</properties>
-  <modules>
-    <module>zuul-route-redis-spring-boot-autoconfigure</module>
-    <module>zuul-route-redis-spring-boot-starter</module>
-  </modules>
+	</properties>
+	<modules>
+		<module>zuul-route-redis-spring-boot-autoconfigure</module>
+		<module>zuul-route-redis-spring-boot-starter</module>
+	</modules>
 </project>
