--- a/itopener-parent/demo-parent/demo-zuul-parent/pom.xml
+++ b/itopener-parent/demo-parent/demo-zuul-parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -19,8 +20,8 @@
 		<module>demo-zuul-server1</module>
 		<module>demo-zuul-server2</module>
 		<module>demo-zuul-client</module>
-    <module>demo-zuul-client-db</module>
-    <module>demo-zuul-redis</module>
-    <module>demo-zuul-zk</module>
-  </modules>
+		<module>demo-zuul-client-db</module>
+		<module>demo-zuul-client-redis</module>
+		<module>demo-zuul-client-zk</module>
+	</modules>
 </project>
