增加itopener-generator 增加tools-eureka-admin 修改demo-eureka的端口

--- a/itopener-parent/tools-parent/pom.xml
+++ b/itopener-parent/tools-parent/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.itopener</groupId>
@@ -18,5 +17,7 @@
 		<module>tools-log-appender-parent</module>
 		<module>tools-redis-parent</module>
 		<module>tools-zuul-route-admin-parent</module>
-	</modules>
+    <module>tools-generator</module>
+    <module>tools-eureka-admin-parent</module>
+  </modules>
 </project>
