--- a/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-server/src/main/resources/application.properties
+++ b/itopener-parent/demo-parent/demo-eureka-parent/demo-eureka-server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.application.name=demo-eureka-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.server.eviction-interval-timer-in-ms=30000
+eureka.server.enableSelfPreservation=false
