--- a/itopener-parent/tools-parent/tools-eureka-admin-parent/tools-eureka-admin/pom.xml
+++ b/itopener-parent/tools-parent/tools-eureka-admin-parent/tools-eureka-admin/pom.xml
@@ -44,6 +44,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.itopener</groupId>
+			<artifactId>tools-eureka-admin-view</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
