--- a/itopener-parent/pom.xml
+++ b/itopener-parent/pom.xml
@@ -31,6 +31,7 @@
 		<spring-boot-admin.version>1.5.0</spring-boot-admin.version>
 		<elastic-job-lite.version>2.1.4</elastic-job-lite.version>
 		<spring-cloud.version>Dalston.RELEASE</spring-cloud.version>
+		<spring-data-hadoop.version>2.5.0.RELEASE</spring-data-hadoop.version>
 	</properties>
 
 	<dependencyManagement>
@@ -146,6 +147,12 @@
 				<groupId>com.dangdang</groupId>
 				<artifactId>elastic-job-lite-spring</artifactId>
 				<version>${elastic-job-lite.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-hadoop</artifactId>
+				<version>${spring-data-hadoop.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
