增加spring cloud config的demo

--- a/itopener-parent/demo-parent/demo-springcloud-config-parent/demo-springcloud-config-server/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-springcloud-config-parent/demo-springcloud-config-server/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
-server.port=8888
+server.port=8887
 spring.cloud.config.server.git.uri=https://git.oschina.net/itopener/config-repo.git
 spring.cloud.config.server.git.username=442617114@qq.com
 spring.cloud.config.server.git.password=silence1218DFW
 spring.cloud.config.server.git.basedir=target/config
-spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.server.git.searchPaths={application}
