--- a/itopener-parent/demo-parent/demo-springcloud-config-parent/demo-springcloud-config/src/main/resources/application.properties
+++ b/itopener-parent/demo-parent/demo-springcloud-config-parent/demo-springcloud-config/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 #server.port=8080  
-spring.cloud.config.uri=http://localhost:8888
-spring.application.name=demo-springcloud-config
-spring.config.name=democonfig
+spring.application.name=democonfig
+#spring.config.name=democonfig
 spring.cloud.config.profile=dev
