完善spring cloud zipkin服务跟踪的demo

--- a/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin-ui/pom.xml
+++ b/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin-ui/pom.xml
@@ -39,10 +39,10 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-server</artifactId>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>io.zipkin.java</groupId>
 			<artifactId>zipkin-autoconfigure-ui</artifactId>
