--- a/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin1/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin1/src/main/resources/application-dev.properties
@@ -5,5 +5,6 @@ logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
 spring.sleuth.sampler.percentage=1.0
+spring.zipkin.baseUrl=http://localhost:8080/
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
