--- a/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin4/src/main/resources/application-dev.properties
+++ b/itopener-parent/demo-parent/demo-zipkin-parent/demo-zipkin4/src/main/resources/application-dev.properties
@@ -5,3 +5,4 @@ logging.level.org.springframework=INFO
 logging.level.com.itopener=DEBUG
 
 spring.sleuth.sampler.percentage=1.0
+spring.zipkin.baseUrl=http://localhost:8080/
