增加memo的登录接口

--- a/itopener-parent/memo-parent/memo/src/main/resources/application-dev.properties
+++ b/itopener-parent/memo-parent/memo/src/main/resources/application-dev.properties
@@ -7,6 +7,9 @@ logging.level.com.itopener=DEBUG
 logging.path=logs/
 logging.file=logs/memo-all.log
 
+wechat.app.id=wxebaff9758cceccb5
+wechat.app.secret=bb56cf922ce5069e9dc0a4eff90c75c7
+
 # Druid
 logging.level.druid.sql=ERROR
 logging.level.druid.sql.DataSource=ERROR
